src/objects/ffr__XXXInvoiceLineItem__c.object
<CustomObject>
    <description>For internal use only.</description>
    <fields>
        <fullName>ffr__Invoice__c</fullName>
        <label>Invoice</label>
        <referenceTo>ffr__XXXInvoice__c</referenceTo>
        <relationshipLabel>XXX Invoice Line Items</relationshipLabel>
        <relationshipName>InvoiceLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ffr__LineNumber__c</fullName>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__NetValue__c</fullName>
        <formula>ffr__Quantity__c  *  ffr__UnitPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__TaxCode__c</fullName>
        <label>Tax Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__TaxValue1__c</fullName>
        <label>Tax Value 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__TaxValue2__c</fullName>
        <label>Tax Value 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__UnitPrice__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>XXX Invoice Line Item</label>
    <nameField>
        <displayFormat>XILI{000000}</displayFormat>
        <label>Invoice Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>XXX Invoice Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>